[gd_scene load_steps=7 format=3 uid="uid://bddnh2qx4snh5"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_bina8"]
[ext_resource type="FontFile" uid="uid://cwvkpo5nqlosk" path="res://Game Resources/nulshock bd.ttf" id="2_j53x2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ljbb"]
bg_color = Color(0.44, 0.377667, 0.066, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.729412, 0.662745, 0.0666667, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="LabelSettings" id="LabelSettings_wligr"]
font = ExtResource("2_j53x2")
font_size = 35
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n413o"]
font = ExtResource("2_j53x2")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qpsjr"]
font = ExtResource("2_j53x2")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bina8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -168.0
offset_right = 200.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5ljbb")

[node name="GameOverText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 35.0
offset_right = 131.0
offset_bottom = 81.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_wligr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.5
offset_top = 107.0
offset_right = 175.5
offset_bottom = 153.0
grow_horizontal = 2
text = "HIGH-SCORE: 9999
"
label_settings = SubResource("LabelSettings_n413o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.5
offset_top = 157.0
offset_right = 175.5
offset_bottom = 203.0
grow_horizontal = 2
text = "SCORE: 9999
"
label_settings = SubResource("LabelSettings_qpsjr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = 57.0
offset_right = 143.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j53x2")
theme_override_font_sizes/font_size = 30
text = "PLAY AGAIN"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
